@@ -1,3 +1,8 @@
+2007-10-15  KUBO Takehiro  <kubo@jiubao.org>
+	* lib/oci8/object.rb: quick fix to get and set object
+	   attributes without explicitly setting default_connection.
+	   I am now wavering about what to do.
+
 2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/oraconf.rb: fix a problem to compile with a
 	   third-party x86_64 rpm package. '--with-instant-client'
